# sentinel

./: README.md  pyproject.toml  sentinel.yaml
.claude/: settings.json
examples/policies/CAP-001/: expected_proved.json  expected_refuted.json
examples/policies/POS-001/: expected_proved.json  expected_refuted.json
sentinel/: __init__.py  cli.py  config.py
sentinel/agents/: __init__.py  base.py  claude_agent.py  gpt_agent.py  scripted_agent.py
sentinel/guardrails/: base.py  biject_adapter.py  stub_adapter.py
sentinel/policies/: __init__.py  deploy.py  registry.py
sentinel/runner/: __init__.py  classifier.py  comparator.py  loop.py
sentinel/web/: index.html  schemas.py  server.py
web/: index.html
