[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biject-sentinel"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
]

[project.scripts]
sentinel = "sentinel.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]
